added the section regarding the parameter estimation

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -5,3 +5,12 @@
 Type= {Article},
     url = {https://msu.edu/course/prr/840/econimpact/pdf/ecimpvol1.pdf}
   }
+
+@Misc{ML,
+    title = {Maximum Likelihood Estimation of Logistic
+Regression Models: Theory and Implementation},
+    author = {Scott A. Czepiel},
+    year = {2017},
+Type= {Article},
+    url = {https://czep.net/stat/mlelr.pdf}
+  }
