added the section for ridge lasso and elastic net

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,9 +1,10 @@
-@Misc{eco.impact,
-    title = {Economic Impacts of Tourism},
-    author = {Daniel J. Stynes},
+@Misc{ridge_lasso,
+    title = {The logistic lasso and ridge regression in predicting corporate
+failure},
+    author = {Jose Manuel Pereira, Mario Bastoa, Amelia Ferreira da Silvab},
     year = {2016},
 Type= {Article},
-    url = {https://msu.edu/course/prr/840/econimpact/pdf/ecimpvol1.pdf}
+    url = {https://www.sciencedirect.com/science/article/pii/S2212567116303100}
   }
 
 @Misc{ML,
@@ -14,3 +15,12 @@ Regression Models: Theory and Implementation},
 Type= {Article},
     url = {https://czep.net/stat/mlelr.pdf}
   }
+		
+@Misc{EN,
+    title = {Regularization and variable selection via the
+elastic net},
+    author = {Hui Zou and Trevor Hastie},
+    year = {2005},
+Type= {Article},
+    url = {https://web.stanford.edu/~hastie/Papers/B67.2%20(2005)%20301-320%20Zou%20&%20Hastie.pdf}
+  }	
