--- a/bibliography.bib
+++ b/bibliography.bib
@@ -24,3 +24,19 @@ elastic net},
 Type= {Article},
     url = {https://web.stanford.edu/~hastie/Papers/B67.2%20(2005)%20301-320%20Zou%20&%20Hastie.pdf}
   }	
+		
+@Manual{text2vec,
+    title = {text2vec: Modern Text Mining Framework for R},
+    author = {Dmitriy Selivanov and Qing Wang},
+    year = {2018},
+    note = {R package version 0.5.1},
+    url = {https://CRAN.R-project.org/package=text2vec},
+  }
+		
+@Misc{token,
+    title = {Tokenization},
+    author = {Craig Trim},
+    year = {2013},
+Type= {Article},
+    url = {https://www.ibm.com/developerworks/community/blogs/nlp/entry/tokenization?lang=en}
+  }			
