--- a/bibliography.bib
+++ b/bibliography.bib
@@ -40,3 +40,14 @@ Type= {Article},
 Type= {Article},
     url = {https://www.ibm.com/developerworks/community/blogs/nlp/entry/tokenization?lang=en}
   }			
+		
+		@Article{glmte,
+  title = {Regularization Paths for Cox's Proportional Hazards Model via Coordinate Descent},
+  author = {Noah Simon and Jerome Friedman and Trevor Hastie and Rob Tibshirani},
+  journal = {Journal of Statistical Software},
+  year = {2011},
+  volume = {39},
+  number = {5},
+  pages = {1--13},
+  url = {http://www.jstatsoft.org/v39/i05/},
+}
